--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,27 @@
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
 /vendor
+/node_modules
+*.log
+
+# Laravel 4 specific
+bootstrap/compiled.php
+app/storage/
+
+# Laravel 5 & Lumen specific
+public/storage
+/public/build
+public/hot
+
+# Laravel 5 & Lumen specific with changed public path
+public_html/storage
+public_html/hot
+
+auth.json
+storage/*.key
 .env
 .env.backup
-.phpunit.result.cache
-Homestead.json
 Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
+Homestead.json
+/.vagrant
+.phpunit.result.cache
 /.idea
 /.vscode
